lead-scan/force-app/main/default/objects/Scan_Segment__c/Scan_Segment__c.object-meta.xml
<CustomObject>
    <description>Search segment of the weekly lead scan: what to look for, how much search budget it gets and how well it converts.</description>
    <label>Scan Segment</label>
    <nameField>
        <label>Scan Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scan Segments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>