lead-scan/force-app/main/default/objects/Scan_Segment__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <description>Only active segments are searched by the weekly lead scan.</description>
    <label>Active</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>