lead-scan/force-app/main/default/objects/Scan_Segment__c/fields/Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Rate__c</fullName>
    <description>Share of leads from this segment that became an opportunity.</description>
    <label>Conversion Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>