lead-scan/force-app/main/default/objects/Scan_Segment__c/fields/Deals_Won__c.field-meta.xml
<CustomField>
    <fullName>Deals_Won__c</fullName>
    <description>Number of closed won opportunities from leads of this segment.</description>
    <label>Deals Won</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>