lead-scan/force-app/main/default/objects/Scan_Segment__c/fields/Exploration__c.field-meta.xml
<CustomField>
    <fullName>Exploration__c</fullName>
    <description>Marks a new or unproven segment that runs on the exploration budget.</description>
    <label>Exploration</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>