lead-scan/force-app/main/default/objects/Scan_Segment__c/fields/Last_Evaluated__c.field-meta.xml
<CustomField>
    <fullName>Last_Evaluated__c</fullName>
    <description>Moment the scan last recalculated the metrics and weight of this segment.</description>
    <label>Last Evaluated</label>
    <type>DateTime</type>
</CustomField>