lead-scan/force-app/main/default/objects/Scan_Segment__c/fields/Leads_Created__c.field-meta.xml
<CustomField>
    <fullName>Leads_Created__c</fullName>
    <description>Number of leads this segment has produced. Updated by the scan.</description>
    <label>Leads Created</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>