lead-scan/force-app/main/default/objects/Scan_Segment__c/fields/Leads_Qualified__c.field-meta.xml
<CustomField>
    <fullName>Leads_Qualified__c</fullName>
    <description>Number of leads from this segment that were qualified or converted.</description>
    <label>Leads Qualified</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>