lead-scan/force-app/main/default/objects/Scan_Segment__c/fields/Leads_Unqualified__c.field-meta.xml
<CustomField>
    <fullName>Leads_Unqualified__c</fullName>
    <description>Number of leads from this segment that were set to Unqualified.</description>
    <label>Leads Unqualified</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>