lead-scan/force-app/main/default/objects/Scan_Segment__c/fields/Opportunities_Created__c.field-meta.xml
<CustomField>
    <fullName>Opportunities_Created__c</fullName>
    <description>Number of opportunities created from leads of this segment.</description>
    <label>Opportunities Created</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>