lead-scan/force-app/main/default/objects/Scan_Segment__c/fields/Search_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Search_Strategy__c</fullName>
    <description>Instructions for the scan describing what to search for in this segment.</description>
    <label>Search Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>