lead-scan/force-app/main/default/objects/Scan_Segment__c/fields/Target_Industry__c.field-meta.xml
<CustomField>
    <fullName>Target_Industry__c</fullName>
    <description>Industry or sub-industry this segment targets, in the values of the Lead Industry picklist.</description>
    <label>Target Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>