lead-scan/force-app/main/default/objects/Scan_Segment__c/fields/Weight__c.field-meta.xml
<CustomField>
    <fullName>Weight__c</fullName>
    <description>Share of the weekly search budget assigned to this segment. Updated automatically by the scan.</description>
    <label>Weight</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>